--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
         <span id = 'result' ></span>
     </body>
     </div>
-    <footer> &#169; This calculator belongs to Desmond Ong </footer>
+    <footer> &#169; Everyone Can Get Rich </footer>
 </html>
